# sparkle-event

./: CMakeLists.txt  README.md
cmake/: SparkleEventsConfig.cmake.in
examples/: BossTutorial.cpp  CMakeLists.txt  DayNightCycle.cpp  MenuButtons.cpp  PlayerHealthUpdate.cpp  PlayerWeapon.cpp
include/Sparkle/: Event.h
tests/: CMakeLists.txt  test_event.cpp
